--- a/oehealth_idn/report/report_menu.xml
+++ b/oehealth_idn/report/report_menu.xml
@@ -30,9 +30,9 @@
         name="oehealth_idn.report_konsultasi_rujukan" menu="True"
         /> -->
 
-    <report id="rujukan_radiologi_report_menu" string="Rujukan Radiologi" model="unit.registration" report_type="qweb-pdf" name="oehealth_idn.report_rujukan_radiologi" menu="True" />
+    <report id="rujukan_radiologi_report_menu" string="Rujukan Radiologi" model="unit.registration" report_type="qweb-pdf" name="oehealth_idn.report_rujukan_radiologi" menu="False" />
 
-    <report id="rujukan_pasien_report_menu" string="Rujukan External" model="unit.registration" report_type="qweb-pdf" name="oehealth_idn.report_rujukan_pasien" menu="True" />
+    <report id="rujukan_pasien_report_menu" string="Rujukan External" model="unit.registration" report_type="qweb-pdf" name="oehealth_idn.report_rujukan_pasien" menu="False" />
 
     <report id="perintah_rawat_inap_report_menu" string="Surat Perintah Rawat Inap" model="unit.registration" report_type="qweb-pdf" name="oehealth_idn.report_perintah_rawat_inap" menu="True" />
 
@@ -52,13 +52,13 @@
 
     <report id="catatan_asuhan_gizi_report_menu" string="Form Catatan Asuhan Gizi" model="oeh.medical.evaluation" report_type="qweb-pdf" name="oehealth_idn.report_catatan_asuhan_gizi" menu="True" />
 
-    <report id="persetujuan_tindakan_report_menu" string="Persetujuan Tindakan" model="unit.registration" report_type="qweb-pdf" name="oehealth_idn.report_persetujuan_tindakan" menu="True" />
+    <report id="persetujuan_tindakan_report_menu" string="Persetujuan Tindakan" model="unit.registration" report_type="qweb-pdf" name="oehealth_idn.report_persetujuan_tindakan" menu="False" />
 
     <report id="rujukan_poli_gigi_report_menu" string="Rujukan Poli Gigi" model="unit.registration" report_type="qweb-pdf" name="oehealth_idn.report_rujukan_poli_gigi" menu="True" />
 
     <report id="pemeriksaan_poli_gigi_report_menu" string="Pemeriksaan Poli Gigi" model="unit.registration" report_type="qweb-pdf" name="oehealth_idn.report_pemeriksaan_poli_gigi" menu="True" />
 
-    <report id="rujukan_internal_report_menu" string="Rujukan Internal" model="unit.registration" report_type="qweb-pdf" name="oehealth_idn.report_rujukan_internal" menu="True" />
+    <report id="rujukan_internal_report_menu" string="Rujukan Internal" model="unit.registration" report_type="qweb-pdf" name="oehealth_idn.report_rujukan_internal" menu="False" />
 
     <report id="surat_keterangan_report_menu" string="Surat Keterangan" model="oeh.medical.appointment.register.walkin" report_type="qweb-pdf" name="oehealth_idn.report_surat_keterangan" menu="True" />
 
@@ -113,6 +113,23 @@
         <field name="header_spacing">0</field>
         <field name="dpi">90</field>
         <field name="report_ids" eval="[(4, ref('oehealth_idn.rujukan_radiologi_report_menu'))]" />
+    </record>
+
+    <record id="resep_paperformat" model="report.paperformat">
+        <field name="name">Resep Format</field>
+        <field name="default" eval="True" />
+        <field name="format">A5</field>
+        <field name="page_height">0</field>
+        <field name="page_width">0</field>
+        <field name="orientation">Portrait</field>
+        <field name="margin_top">0</field>
+        <field name="margin_bottom">0</field>
+        <field name="margin_left">0</field>
+        <field name="margin_right">0</field>
+        <field name="header_line" eval="False" />
+        <field name="header_spacing">0</field>
+        <field name="dpi">90</field>
+        <field name="report_ids" eval="False" />
     </record>
 
     <record id="observasi_terapi_pasien_paperformat" model="report.paperformat">
