--- a/oehealth_idn/report/resep_report.xml
+++ b/oehealth_idn/report/resep_report.xml
@@ -1,38 +1,42 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <odoo>
     <template id="report_resep">
+        <div class="header">
+            <div class="container" style="border-bottom: 1px solid black;">
+                <table style="width:100%">
+                    <tr>
+                        <td style="text-align:center; padding:8px; width:15%;">
+                                                
+                            <!-- Multicompany -->
+                            <t t-if="not o and doc">
+                                <t t-set="o" t-value="doc"/>
+                            </t>
+                            <t t-if="o and 'company_id' in o">
+                                <t t-set="company" t-value="o.company_id"/>
+                            </t>
+                            <t t-if="not o or not 'company_id' in o">
+                                <t t-set="company" t-value="res_company"/>
+                            </t>
+                            <br/>
+                            <img style="width:50px;height:50px;" t-if="company.logo" t-att-src="'data:image/png;base64,%s' %company.logo"/>
+                            
+                        </td>
+                        <td style="text-align:bottom; padding:8px;">
+                            
+                            <t t-foreach="docs" t-as="o">
+                                <h4><span t-field="o.pharmacy.operating_unit_id.name"/></h4>
+                                <h5><span t-field="o.pharmacy.operating_unit_id.unit_address"/></h5>
+                                <h6>No. Izin Klinik : <span t-field="o.pharmacy.operating_unit_id.izin_klinik"/></h6>
+                                <h6>No. Izin Apotik : <span t-field="o.pharmacy.operating_unit_id.izin_apotik"/></h6>
+                            </t>
+                            
+                        </td>
+                    </tr>
+                </table>  
+            </div>
+        </div>
         <t t-call="report.html_container">
             <t t-foreach="docs" t-as="o">
-                <!-- Header -->
-                <t t-if="not o and doc">
-                    <t t-set="o" t-value="doc"/>
-                </t>
-                <t t-if="o and 'company_id' in o">
-                    <t t-set="company" t-value="o.company_id"/>
-                </t>
-                <t t-if="not o or not 'company_id' in o">
-                    <t t-set="company" t-value="res_company"/>
-                </t>
-                <div class="header">
-                    <div class="container" style="border-bottom: 1px solid black;">
-                        <table style="width:100%">
-                            <tr>
-                                <td style="text-align:center; padding:8px; width:15%;">
-                                    <br/>
-                                    <img style="width:50px;height:50px;" t-if="company.logo" t-att-src="'data:image/png;base64,%s' % company.logo"/>
-                                </td>
-                                <td style="text-align:bottom; padding:8px;">
-
-                                    <h4><span t-field="o.pharmacy.operating_unit_id.name"/></h4>
-                                    <h5><span t-field="o.pharmacy.operating_unit_id.unit_address"/></h5>
-                                    <h6>No. Izin Klinik : <span t-field="o.pharmacy.operating_unit_id.izin_klinik"/></h6>
-                                    <h6>No. Izin Apotik : <span t-field="o.pharmacy.operating_unit_id.izin_apotik"/></h6>
-                                </td>
-                            </tr>
-                        </table>
-                    </div>
-                </div>
-                <!-- end header -->
                 <div class="page">
                     <div class="oe_structure">
                             <div class="row">
@@ -61,7 +65,8 @@
                                             </tr>
                                         </thead>
                                         <tbody>
-                                            <tr t-foreach="o.prescription_line" t-as="s">
+                                            <t t-foreach="o.prescription_line" t-as="s">
+                                                <tr>
                                                     <td class="text-left">
                                                         <span t-field="s.name"/>
                                                     </td>
@@ -77,7 +82,8 @@
                                                     <td class="text-left">
                                                         <span t-field="s.admin_times"/>
                                                     </td>
-                                            </tr>
+                                                </tr>
+                                            </t>
                                             <t t-foreach="o.concoction_ids" t-as="cc">
                                                 <tr>  
                                                     <th colspan="5"> 
@@ -90,7 +96,7 @@
                                                     <th></th>
                                                     <th>Detail Obat</th>
                                                     <th>Zat Aktif</th>
-                                                    <th colspan="2">Total Qty</th>
+                                                    <th colspan="1">Total Qty</th>
                                                 </tr>
                                                 <t t-foreach="cc.concoction_detail_ids" t-as="ccd">
                                                     <tr>
@@ -99,7 +105,7 @@
                                                             <span t-field="ccd.product_id.name" />
                                                         </td>
                                                         <td>
-                                                            <span t-field="ccd.zat_qty" />
+                                                            <span t-field="ccd.zat_qty" /> (mg/g/ml)
                                                         </td>
                                                         <td colspan="2">
                                                             <span t-field="ccd.total" />
